tests/ui/const-generics/const-arg-in-const-arg.full.stderr
error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:18:23
   |
LL |     let _: [u8; faz::<'a>(&())];
   |                       ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:8:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:21:23
   |
LL |     let _: [u8; faz::<'b>(&())];
   |                       ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:8:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:41:24
   |
LL |     let _: Foo<{ faz::<'a>(&()) }>;
   |                        ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:8:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:44:24
   |
LL |     let _: Foo<{ faz::<'b>(&()) }>;
   |                        ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:8:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error: unconstrained generic constant
  --> $DIR/const-arg-in-const-arg.rs:13:12
   |
LL |     let _: [u8; foo::<T>()];
   |            ^^^^^^^^^^^^^^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); foo::<T>()]:`

error: unconstrained generic constant
  --> $DIR/const-arg-in-const-arg.rs:15:12
   |
LL |     let _: [u8; bar::<N>()];
   |            ^^^^^^^^^^^^^^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); bar::<N>()]:`

error: unconstrained generic constant
  --> $DIR/const-arg-in-const-arg.rs:36:12
   |
LL |     let _: Foo<{ foo::<T>() }>;
   |            ^^^^^^^^^^^^^^^^^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); { foo::<T>() }]:`

error: unconstrained generic constant
  --> $DIR/const-arg-in-const-arg.rs:38:12
   |
LL |     let _: Foo<{ bar::<N>() }>;
   |            ^^^^^^^^^^^^^^^^^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); { bar::<N>() }]:`

error: unconstrained generic constant
  --> $DIR/const-arg-in-const-arg.rs:25:17
   |
LL |     let _ = [0; foo::<T>()];
   |                 ^^^^^^^^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); foo::<T>()]:`

error: unconstrained generic constant
  --> $DIR/const-arg-in-const-arg.rs:27:17
   |
LL |     let _ = [0; bar::<N>()];
   |                 ^^^^^^^^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); bar::<N>()]:`

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:30:23
   |
LL |     let _ = [0; faz::<'a>(&())];
   |                       ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:8:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:33:23
   |
LL |     let _ = [0; faz::<'b>(&())];
   |                       ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:8:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error: unconstrained generic constant
  --> $DIR/const-arg-in-const-arg.rs:47:19
   |
LL |     let _ = Foo::<{ foo::<T>() }>;
   |                   ^^^^^^^^^^^^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); { foo::<T>() }]:`

error: unconstrained generic constant
  --> $DIR/const-arg-in-const-arg.rs:49:19
   |
LL |     let _ = Foo::<{ bar::<N>() }>;
   |                   ^^^^^^^^^^^^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); { bar::<N>() }]:`

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:52:27
   |
LL |     let _ = Foo::<{ faz::<'a>(&()) }>;
   |                           ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:8:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:55:27
   |
LL |     let _ = Foo::<{ faz::<'b>(&()) }>;
   |                           ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:8:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error: aborting due to 16 previous errors

For more information about this error, try `rustc --explain E0794`.
